--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -2,17 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recordFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jubgging_nav.MainActivity"
-    android:id="@+id/recordFragment">
+    android:background="#FAFAFA"
+    tools:context="com.example.jubgging_nav.MainActivity">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="#FFFFFF"
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#FFFFFF"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,17 +44,26 @@
             android:id="@+id/txt_jubgginge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="52dp"
+            android:layout_marginStart="56dp"
             android:layout_marginTop="46dp"
             android:layout_marginBottom="630dp"
             android:text="줍깅이"
             android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.263" />
+            app:layout_constraintVertical_bias="0.303" />
+
+        <ImageView
+            android:id="@+id/btn_statics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/statics" />
 
         <ImageView
             android:id="@+id/btn_calender"
@@ -61,13 +71,16 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="76dp"
             android:layout_marginTop="40dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="640dp"
             android:src="@drawable/calender"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_statics"
             app:layout_constraintStart_toEndOf="@+id/btn_profile"
             app:layout_constraintTop_toTopOf="parent" />
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="409dp"
             android:layout_height="639dp"
             android:orientation="horizontal"
@@ -97,9 +110,111 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="63dp"
+                android:layout_marginTop="56dp"
                 android:layout_marginEnd="32dp"
                 android:src="@drawable/line" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="match_parent"
+                android:layout_height="367dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="-1dp"
+                android:layout_marginBottom="75dp"
+                app:srcCompat="@drawable/grayrectangle" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="wrap_content"
+                android:layout_height="127dp"
+                android:layout_alignTop="@+id/imageView3"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="33dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="282dp"
+                app:srcCompat="@drawable/whiterec" />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="88dp"
+                android:layout_height="88dp"
+                android:layout_alignTop="@+id/imageView4"
+                android:layout_alignBottom="@+id/imageView4"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="16dp"
+                android:layout_toStartOf="@+id/imageView7"
+                app:srcCompat="@drawable/graycircle" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/imageView4"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="63dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="71dp"
+                android:layout_toStartOf="@+id/imageView6"
+                android:text="산책 내역"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="88dp"
+                android:layout_height="88dp"
+                android:layout_alignTop="@+id/imageView4"
+                android:layout_alignEnd="@+id/imageView4"
+                android:layout_alignBottom="@+id/imageView4"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="16dp"
+                app:srcCompat="@drawable/graycircle" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/imageView3"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="139dp"
+                android:layout_marginBottom="40dp"
+                android:text="시간" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/imageView3"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="69dp"
+                android:layout_marginTop="139dp"
+                android:layout_marginBottom="40dp"
+                android:layout_toEndOf="@+id/textView4"
+                android:text="플로깅 점수"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/imageView3"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="68dp"
+                android:layout_marginTop="138dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginBottom="40dp"
+                android:layout_toEndOf="@+id/textView8"
+                android:text="칼로리" />
         </RelativeLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
