--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -46,7 +46,7 @@
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" >
         <action
-            android:id="@+id/action_mainFragment_to_recordFragment"
-            app:destination="@id/recordFragment" />
+            android:id="@+id/action_mainFragment_to_PloggingMapsFragment"
+            app:destination="@id/PloggingMapsFragment" />
     </fragment>
 </navigation>
