--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -18,8 +18,7 @@
         <action
             android:id="@+id/action_PloggingMapsFragment_to_cameraFragment"
             app:destination="@id/cameraFragment"
-            app:popUpTo="@id/cameraFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="false" />
         <action
             android:id="@+id/action_PloggingMapsFragment_to_recordFragment"
             app:destination="@id/recordFragment"
